<resources>
    <string name="app_name">Citas Célebres</string>
    <string name="action_settings">Settings</string>

    <string name="quotes">Citas célebres</string>

    <string name="homeOption">Inicio</string>
    <string name="addQoute">Agregar Citas</string>
    <string name="showRandom">Mostrar Aleatoriamente</string>
    <string name="showQoute">Buscar Cita</string>
    <string name="showAll">Lista de Citas</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>