<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/home"
            android:checkable="true"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/homeOption" />
        <item
            android:id="@+id/addQuoteMenu"
            android:checkable="true"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/addQoute" />
        <item
            android:id="@+id/showRandomMenu"
            android:checkable="true"
            android:icon="@drawable/ic_baseline_bubble_chart_24"
            android:title="@string/showRandom" />
        <item
            android:id="@+id/showQuoteMenu"
            android:checkable="true"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/showQoute" />
        <item
            android:id="@+id/showAllMenu"
            android:checkable="true"
            android:icon="@drawable/ic_baseline_slideshow_24"
            android:title="@string/showAll" />
    </group>
</menu>